# solana-stablecoin-standard

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: lib.rs  main.rs  types.rs
backend/src/routes/: compliance.rs  events.rs  health.rs  mint.rs  mod.rs
backend/src/services/: executor.rs  indexer.rs  mod.rs  sanctions.rs  webhook.rs
backend/tests/: api.rs
cli/: package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: audit-log.ts  blacklist.ts  burn.ts  freeze.ts  holders.ts  init.ts  mint.ts  minters.ts  pause.ts  seize.ts  status.ts  thaw.ts  unpause.ts
cli/src/utils/: config.ts  rpc.ts  stablecoin.ts  target.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEVNET-PROOF.md  MULTI-STABLECOIN-PLAN.md  MULTI-STABLECOIN-TICKETS.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: admin.rs  burn.rs  compliance.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: test-cli.ts
sdk/core/: package.json  tsconfig.json
sdk/core/src/: compliance.ts  constants.ts  index.ts  pda.ts  stablecoin.ts
sdk/core/tests/: compliance-aliases.test.ts  targeting.test.ts
tests/: cli.ts  sss-1.ts  sss-2.ts  sss-v2.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
web/: .env.example  .gitignore  next.config.ts  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/components/: DashboardShell.tsx  Header.tsx
web/src/lib/: sss-client.ts  wallet-provider.tsx
web/src/lib/idl/: sss_token.json
