[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.3"
spl-associated-token-account-interface = "1"
spl-token-2022-interface = "1"
sss-token = { path = "../programs/sss-token", features = ["no-entrypoint"] }

[dependencies.trident-fuzz]
version = "0.12.0"
features = ["token"]

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"
