[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard - SSS-1 and SSS-2"
edition = "2021"
license = "MIT"
repository = "https://github.com/solanabr/solana-stablecoin-standard"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.5.1"
transfer-hook = { path = "../transfer-hook", features = ["cpi"] }
