[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer Hook for SSS-2 Compliant Stablecoin"
edition = "2021"
license = "MIT"
repository = "https://github.com/solanabr/solana-stablecoin-standard"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
spl-token-2022 = "6.0.0"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
